manual dist assembly